--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
   <body>
     <h1>Weather Widget</h1>
+    <h2><div class="close-icon">   
+      <i class="fa-solid fa-cloud"></i>
+      <i class="fa-solid fa-wind"></i>
+      <script src="https://kit.fontawesome.com/547695b37c.js" crossorigin="anonymous"></script>
+      </h2>
 </body>
 <section class="option-2-enhanced">
     <div class="option-container">
@@ -17,12 +22,14 @@
 
   <div class="container">
     <div class="input">
-        <input type="text " class="inputValue" placeholder="Enter Location">
-        <button class="button">Get Results<i class="fas fa-search"></i></button>
+        <input type="text " class="inputValue" placeholder="Enter City Name">
+        <button class="button"> Submit <i class="fa-solid fa-magnifying-glass"></i>
     </div>
+  </div>
+
   <div class="displayWeather">
-    <h1 class="temp">----°C</h1>
-    <p class="desc">---</p>
+    <h1 class="temp">__°C</h1>
+    <p class="desc">Weather Conditions</p>
 </div>
     <script src="script.js" defer></script>
   </section>
